--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 <div>
                     <img src="images/image 2.svg" alt="Puma" class="company_logo">
                 </div> 
-                <div>7
+                <div>
                     <img src="images/image 9.svg" alt="adidas" class="company_logo">
                 </div>
                 <div>
@@ -95,8 +95,6 @@
                     <img src="images/fingerprint.png">
                 </div>
                 <h3 class="Feature_Heading">Security</h3>
-
-                    Learn more</h3>
                 <p>Get curated and design inspiration delivered straight to your inbox.</p>
                 <p class="Learn_more"><a href="#">Learn more</a></p>
             </div>
