--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                     <img src="images/image 7.svg" alt="Samsung" class="company_logo">
                 </div>
         <div class="dotty_picture">
-            <img src="images/Group.png">
+            <img src="images/Group.png" alt="dotty_picture">
         </div>
     </div>
     <section class="Features">
@@ -74,25 +74,25 @@
             <h2>Designed with everyone in mind</h2>
         </div>
         <div class="Feature_wrapper">
-            <div class="Users_In_Mind">
+            <div class="Feature">
                 <div>
-                    <img src="images/pencil-case.png">
+                    <img src="images/pencil-case.png" alt="pencil">
                 </div>
                 <h3 class="Feature_Heading">Designed with Users in Mind</h3>
                 <p>Get curated and design inspiration delivered straight to your inbox.</p>
                 <p class="Learn_more"><a href="#">Learn more</a></p>
             </div>
-            <div class="Scalabilty">
+            <div class="Feature">
                 <div>
-                    <img src="images/vector.png">
+                    <img src="images/vector.png" alt="vector">
                 </div>
                 <h3 class="Feature_Heading">Scalability</h3>
                 <p >Get curated and design inspiration delivered straight to your inbox.</p>
                 <p class="Learn_more"><a href="#">Learn more</a></p>
             </div>
-            <div class="Security">
+            <div class="Feature">
                 <div>
-                    <img src="images/fingerprint.png">
+                    <img src="images/fingerprint.png" alt="fingerprint">
                 </div>
                 <h3 class="Feature_Heading">Security</h3>
                 <p>Get curated and design inspiration delivered straight to your inbox.</p>
@@ -102,7 +102,7 @@
     </section>
     <section class="footer_content">
         <div style="align-self: flex-start;">
-            <img src="images/Group 2.svg">
+            <img src="images/Group 2.svg" alt="Group 2">
         </div>  
             <div>
                 <p> Get Started</p>
@@ -134,9 +134,9 @@
         <div class="footer">
             <p>Copyright 2018. <span class="orange">Gravii.</span><span class="black">ng.</span> All rights reserved</p>
             <div class="icons">
-                <img src="images/instagram-logo.svg">
-                <img src="images/facebook.svg">
-                <img src="images/twitter.svg">
+                <img src="images/instagram-logo.svg" alt="instagram">
+                <img src="images/facebook.svg" alt="facebook">
+                <img src="images/twitter.svg" alt="twitter">
             </div>
         </div>
     </footer>
