--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
                 </div>
                 <h3 class="Feature_Heading">Designed with Users in Mind</h3>
                 <p>Get curated and design inspiration delivered straight to your inbox.</p>
-                <p class="Learn_more"><a href="#">Learn more</a></p>
+                <p class="Learn_more"><a href="#" class="orangee">Learn more</a></p>
             </div>
             <div class="Feature">
                 <div>
