--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
     <title>Document</title>
 </head>
@@ -24,6 +25,9 @@
                     <li class="nav_link"><a href="#">Contact</a></li>
                 </ul>
             </div>
+            <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+                <i class="fa fa-bars"></i>
+            </a>
         </nav>
         <div class="Hero __desktop">
             <div class="Hero_wrapper">
@@ -126,7 +130,7 @@
         <div style="align-self: flex-start;">
             <img src="images/Group 2.svg" alt="Group 2">
         </div>  
-            <div>
+            <div class="footer_options">
                 <p> Get Started</p>
                 <ul>
                     <li> Documentation</li>
@@ -135,7 +139,7 @@
                     <li>Guides</li>
                 </ul>
             </div>
-            <div>
+            <div class="footer_options">
                 <p> Platforms</p>
                 <ul>
                     <li>Available on iOS</li>
@@ -143,9 +147,9 @@
                     <li>Available on Web</li>
                 </ul>
             </div>
-            <div>
+            <div class="footer_options">
                 <p> Newsletter</p>
-                <p class="newsletter">Get curated content and design inspiration delivered straight to your inbox. </p>
+                <p class="newsletter">Get curated content and design inspiration delivered straight to your inbox. <span><a href="" class="orange">Learn more</a></span> </p>
                 <div class="Box">
                     <input type="email" placeholder="Your email"/>
                     <button> Submit</button>
