--- a/index.html
+++ b/index.html
@@ -14,12 +14,14 @@
 <body>
     <div class="main_section">
         <nav class="nav_bar">
-            <div class="nav_logo">
-                <img src="images/Group 2.svg" alt="nav-logo">
+            <div class="nav_logo" id="nav_log">
+                <div class="border_bottom">
+                    <img src="images/Group 2.svg" alt="nav-logo">
+                </div>
             </div>
             <div>
-                <ul class="nav_links">
-                    <li class="nav_link text-orange"><a href="index.html">Home</a></li>
+                <ul class="nav_links" id="links">
+                    <li class="nav_link text-orange" id="link"><a href="index.html">Home</a></li>
                     <li class="nav_link "><a href="#">Products</a></li>
                     <li class="nav_link"><a href="#">About Us</a></li>
                     <li class="nav_link"><a href="#">Contact</a></li>
@@ -90,7 +92,8 @@
             </div>
             
         <div class="dotty_picture">
-            <img src="images/Group.png" alt="dotty_picture">
+            <img src="images/Group.png" alt="dotty_picture" class="desktop_dotty">
+            <img src="images/Group_mobile.png">
         </div>
     </div>
     </div>
@@ -99,7 +102,7 @@
             <h5 class="orange">Features</h5>
             <h2>Designed with everyone in mind</h2>
         </div>
-        <div class="Feature_wrapper">
+        <div class="Feature_wrapper Design">
             <div class="col Users_In_Mind">
                 <div>
                     <img src="images/pencil-case.png" alt="pencil">
@@ -158,6 +161,11 @@
     </section>
     <footer>
         <div class="footer">
+            <div class="icons2">
+                <img src="images/instagram-logo.svg" alt="instagram">
+                <img src="images/facebook.svg" alt="facebook">
+                <img src="images/twitter.svg" alt="twitter">
+            </div>
             <p>Copyright 2018. <span class="orange">Gravii.</span><span class="black">ng.</span> All rights reserved</p>
             <div class="icons">
                 <img src="images/instagram-logo.svg" alt="instagram">
@@ -166,5 +174,6 @@
             </div>
         </div>
     </footer>
+    <script src="main.js"></script>
 </body>
 </html>
